@@ -108,6 +108,7 @@ def parse_freeform_docstr_examples(docstr, callname=None, modpath=None,
             'SkipDoctest:',
             'Ignore:',
             'Script:',
+            'Benchmark:',
             'Sympy:',
         ]
     else:
@@ -188,6 +189,8 @@ def parse_google_docstr_examples(docstr, callname=None, modpath=None, lineno=1,
         if type.startswith('Doctest'):
             example_blocks.append((type, block))
         if type.startswith('Script'):
+            example_blocks.append((type, block))
+        if type.startswith('Benchmark'):
             example_blocks.append((type, block))
     for num, (type, (docsrc, offset)) in enumerate(example_blocks):
         # Add one because offset applies to the google-type label
